Bug 40077 - Bottom portion (Descenders) of characters cropped in gtk-based VCL Edit control (with or without combo)
Summary: Bottom portion (Descenders) of characters cropped in gtk-based VCL Edit contr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Linux (All)
: lowest trivial
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0
Keywords:
: 57096 58361 73107 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-14 06:04 UTC by Chris Peñalver
Modified: 2013-12-29 05:41 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Displays fine. (90.67 KB, image/png)
2011-08-16 19:54 UTC, Jeffrey
Details
Find&Replace dialog in Clearlooks theme (20.88 KB, image/png)
2013-05-27 14:37 UTC, pavelz
Details
standard filter dropdown menu with cropped checkbox (27.87 KB, image/png)
2013-11-01 09:40 UTC, pavelz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Peñalver 2011-08-14 06:04:14 UTC
Downstream bug may be found at:
https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/102026

OOo bug may be found at:
http://openoffice.org/bugzilla/show_bug.cgi?id=82739

1) lsb_release -rd
Description: Ubuntu 11.04
Release: 11.04

2) apt-cache policy libreoffice-writer
libreoffice-writer:
  Installed: 1:3.3.3-1ubuntu2
  Candidate: 1:3.3.3-1ubuntu2
  Version table:
 *** 1:3.3.3-1ubuntu2 0
        100 /var/lib/dpkg/status
     1:3.3.2-1ubuntu5 0
        500 http://us.archive.ubuntu.com/ubuntu/ natty-updates/main i386 Packages
     1:3.3.2-1ubuntu4 0
        500 http://us.archive.ubuntu.com/ubuntu/ natty/main i386 Packages

3) What is expected to happen is in dialog boxes (ex. when one presses Ctrl F) and types g in the text box, it shows the entire character.

4) What happens instead is the bottom part is not displayed. Screenshot of issue:
https://bugs.launchpad.net/ubuntu/+source/openoffice.org/+bug/102026/+attachment/66730/+files/openoffice_characters_in_dialogs.png
Comment 1 Jeffrey 2011-08-16 19:54:03 UTC
Created attachment 50295 [details]
Displays fine.

Failed to reproduce on LibreOffice 3.4  340m1(Build:103) for OpenSuse Linux. Find and Replace dialog displays the text fine, and  I presume that the other dialog boxes on my version display the alphabet fine as well. See attachment.
Comment 2 Rainer Bielefeld Retired 2011-11-16 00:43:17 UTC
NOT reproducible with "LibreOffice Portable 3.3.3  - WIN7  Home Premium (64bit) German UI [OOO330m19 (Build:301  Tag 3.3.3.1)]", looks fine with 'Tools -> Options -> View' 130%, 100% and 80".

Any Idea for other tests? It seems that not very many users are affected?
Comment 3 Chris Peñalver 2011-11-16 03:06:52 UTC
Rainer Bielefeld, this is unreproducible.

lsb_release -rd
Description:	Ubuntu 11.10
Release:	11.10

apt-cache policy libreoffice-writer
libreoffice-writer:
  Installed: 1:3.4.4-0ubuntu1~ppa1
  Candidate: 1:3.4.4-0ubuntu1~ppa1
  Version table:
 *** 1:3.4.4-0ubuntu1~ppa1 0
        500 http://ppa.launchpad.net/libreoffice/ppa/ubuntu/ oneiric/main i386 Packages
        100 /var/lib/dpkg/status
     1:3.4.3-3ubuntu2 0
        500 http://us.archive.ubuntu.com/ubuntu/ oneiric/main i386 Packages
Comment 4 Chris Peñalver 2011-11-23 03:26:28 UTC
As per downstream report, original reporter still reproducible in 3.4.4, 64-bit environment only.

lsb_release -rd
Description: Ubuntu 11.10
Release: 11.10

libreoffice 1:3.4.4-0ubuntu1

Not reproducible in 3.4.4, 32-bit.

lsb_release -rd
Description: Ubuntu 11.10
Release: 11.10

apt-cache policy libreoffice-writer
libreoffice-writer:
  Installed: 1:3.4.4-0ubuntu1~ppa1
  Candidate: 1:3.4.4-0ubuntu1~ppa1
  Version table:
 *** 1:3.4.4-0ubuntu1~ppa1 0
        500 http://ppa.launchpad.net/libreoffice/ppa/ubuntu/ oneiric/main i386 Packages
        100 /var/lib/dpkg/status
     1:3.4.3-3ubuntu2 0
        500 http://us.archive.ubuntu.com/ubuntu/ oneiric/main i386 Packages
Comment 5 Robert Roth 2013-01-28 11:01:11 UTC
I can also reproduce this on Ubuntu 12.10, and as this does not reproduce on Windows and OpenSuse (with KDE) I suppose it's a bug in the VCL GTK implementations of the text entry and combobox.
Comment 6 Robert Roth 2013-01-28 11:01:21 UTC
*** Bug 58361 has been marked as a duplicate of this bug. ***
Comment 7 Robert Roth 2013-01-28 11:52:16 UTC
*** Bug 57096 has been marked as a duplicate of this bug. ***
Comment 8 pavelz 2013-01-28 17:07:21 UTC
The behavior somehow depends on the theme, I experience that with the default Ubuntu theme (Ambiance), while some others (e.g. Clearlooks) look good.
Comment 9 Samuel Mehrbrodt 2013-05-25 13:04:47 UTC
pavelz, you are right. This is a theme issue.
Closing as NOTOURBUG
Comment 10 Samuel Mehrbrodt 2013-05-25 13:20:29 UTC
I reported this in the ubuntu-themes package: https://bugs.launchpad.net/ubuntu-themes/+bug/1184141
Comment 11 pavelz 2013-05-27 14:37:24 UTC
Created attachment 79851 [details]
Find&Replace dialog in Clearlooks theme

I am not sure, that it is only a theme issue, as some dialogs look OK and some do not with the same theme - see attachments in bug 58361 (Find&Replace dialog versus PDF Options dialog).

Even with Clearlooks theme (where text boxes are OK) I experience cropped check boxes and radio buttons (see attachment).
Comment 12 Samuel Mehrbrodt 2013-10-26 23:23:31 UTC
The problem is in LibreOffice, the height of the Comboboxes is smaller than in native GTK2 Applications (21px vs 25px).

I submitted a patch for this: https://gerrit.libreoffice.org/6444
Comment 13 Commit Notification 2013-10-29 14:18:44 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24e5614da671f6809e8c9c2ced550e89ba0bca0a

fdo#40077 Characters cropped in GTK-based ComboBox



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Caolán McNamara 2013-10-29 14:35:07 UTC
I'm not 100% convinced this is the complete fix. But it reportedly improves things, so lets put it in. I kind of feel the ComboBox itself should be larger rather the adjust the subedit within it, but maybe I'm misunderstanding the problem.
Comment 15 Samuel Mehrbrodt 2013-10-29 19:10:37 UTC
I created a new patch where I increased the height of the Combobox: https://gerrit.libreoffice.org/6478
Can you have a look at that, please?
Comment 16 Ivan Timofeev (retired) 2013-11-01 08:14:18 UTC
(In reply to comment #14)
> I kind of feel the ComboBox itself should be
> larger rather the adjust the subedit within it

Yeah, indeed. And I have no idea why Combobox doesn't request a native height.

Samuel, your second patch makes sense, but instead of the hardcoded height I would just reuse this branch:

 if( (nType == CTRL_EDITBOX || nType == CTRL_SPINBOX) && nPart == PART_ENTIRE_CONTROL )
Comment 17 Samuel Mehrbrodt 2013-11-01 08:45:40 UTC
Hi Ivan,

thanks, that looks like the right way. I changed the patch accordingly.
Comment 18 Commit Notification 2013-11-01 09:39:54 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84f4b84212c1d3d27376a430d172f3382922f3f9

Better approach for fdo#40077: Characters cropped in GTK-Combobox



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 pavelz 2013-11-01 09:40:19 UTC
Created attachment 88466 [details]
standard filter dropdown menu with cropped checkbox

I don't know, if this is the same bug, because it manifests as cropped checkbox in standard filter dropdown menu.
Comment 20 Samuel Mehrbrodt 2013-11-01 09:41:25 UTC
pavelz, it's not the same bug. Please open a new one for that issue.
Comment 21 Adolfo Jayme Barrientos 2013-12-29 05:41:29 UTC
*** Bug 73107 has been marked as a duplicate of this bug. ***