fdo#40077 Characters cropped in GTK-based ComboBox

Change-Id: I589ddfee1f69f5e8ba74dcc6abf9afb97cdf367d